[package]
name = "haiku"
version = "0.1.0"
authors = ["Pepeye <gaofolaju@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
futures = "0.3.5"
listenfd = "0.3.3"
# logging
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"
serde = "1.0.110"
serde_json = "1.0.53"
ulid = "0.3.1"
chrono = "0.4.11"

# databases
mongodb = "0.9.2"
bson = "0.14.1"